--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,5 +1,6 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+/*@import "~bootstrap/dist/css/bootstrap.css";*/
 
 /* All of the other imports comes after the bootstrap so we can overwrite it ! */
-@import "bootstrap-navbar-fixed-top.css";
-@import "~animate.css/animate.min.css";
+
+/*@import "~animate.css/animate.min.css";*/
