--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,21 +1,408 @@
-$primary-color: red;
-h1 {
-    background: $primary-color;
+$body-color: #fafafa;
+$orange-btn-bg-color: #e75526;
+$orange-txt-color: #ee572b;
+$grey-txt-color: #5f5f5f;
+
+$screen-sm-min: 786px;
+$screen-md-min: 992px;
+$screen-lg-min: 1200px;
+
+$screen-xs-max: 767px;
+$screen-sm-max: 991px;
+$screen-md-max: 1199px;
+
+// //xs only
+// @media(max-width: @screen-xs-max) {
+// }
+
+// //small and up
+// @media(min-width: @screen-sm-min) {
+// }
+
+// //sm only
+// @media(min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+// }
+
+// //md and up
+// @media(min-width: @screen-md-min) {
+// }
+
+// //md only
+// @media(min-width: @screen-md-min) and (max-width: @screen-md-max) {
+// }
+
+// //lg and up
+// @media(min-width: @screen-lg-min) {
+// }
+
+@import 'bootstrap-overrides';
+
+@font-face {
+  font-family: 'Avenir-next';
+  src: url('../fonts/Avenir Next.ttc') format('truetype');
+  // font-weight: bolder;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Avenir-next-bold';
+  src: url('../fonts/avenir-next-bold.ttf') format('truetype');
+  // font-weight: bolder;
+  font-style: normal;
 }
 
-.user-profile-icon {
-    position: relative;
-    top: 1px;
+@font-face {
+  font-family: 'Avenir-heavy';
+  src: url('../fonts/Avenir-Heavy.ttf') format('truetype');
+  // font-weight: bold;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Avenir-medium';
+  src: url('../fonts/Avenir-Medium.ttf') format('truetype');
+  // font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Avenir-light';
+  src: url('../fonts/Avenir-Light.ttf') format('truetype');
+  // font-weight: lighter;
+  font-style: normal;
+}
+
+body {
+    font-family: 'Avenir-light' !important;  
+    font-weight:lighter;
+    font-size: 16px !important;
+    color: $grey-txt-color !important;
+}
+
+h3 {
+    font-family: 'Avenir-medium' !important;  
+    font-weight: bold !important;
+    font-size: 20px !important;
+    color: #000 !important;
+ }
+
+.divider {
+    background: #e8e8e8;
+    height:1px;
+    margin-top: 53px;
+    margin-bottom: 38px !important;
+}
+
+.navbar {    
+
+    font-size: 16px;
+    font-family: "Avenir-heavy";
+    margin-bottom: 15px;
+
+    @media (min-width: $screen-sm-min) {
+        margin-bottom: 55px !important;
+    }
+
+    .navbar-brand {
+
+        .logo-img {
+
+            margin-right: 15px;
+            float: left;
+            width: 100px;
+
+            @media (min-width: $screen-sm-min) {
+                width: initial;
+                margin-right: 30px;
+            }
+        }
+        .page-header-txt-desktop {
+            color: $orange-txt-color !important;
+            font-size: 16px;
+        }
+        
+        .page-header-txt-mobile {
+            font-size: 13px;
+            color: #000;
+            position: absolute;
+            top: 12px;
+        }
+    }
+    
+    .nav-page-name {
+        padding: 15px 15px;
+        color: $orange-txt-color;
+    }
+
+    .navbar-header {
+        width: 80%;
+        float: left;
+    }
+
+    .navbar-right {
+        margin-top: 0px;
+    }
+
+    .dropdown {
+
+        font-size: 13px;
+        color: #000 !important;
+
+        @media (min-width: $screen-sm-min) {
+            font-size: initial;
+        }
+
+        .dropdown-menu {
+            >li{
+                >a {
+                    color:#000 !important;
+                }
+            }
+        }
+    }
+
+}
+
+.button {
+
+    font-size: 16px;
+    font-family: "Avenir-heavy";
+    height: 37px;
+    line-height: normal;
+    text-align: center;
+    text-decoration: none;
+    color: #fff;
+    background-color: $orange-btn-bg-color; /* Green */
+    border: none;
+    padding: 7px 17px;
     display: inline-block;
-    line-height: 1;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    background-image: url('https://www.tutorialkart.com/sample_image_small.jpg'),
+    border-radius: 5px;
+
+    @media (min-width: $screen-sm-min) {
+        border-radius: 8px;
+    }
+
+    &:hover {
+        background-color: #fff!important;
+        color: $orange-txt-color;
+        border: 1px solid $orange-btn-bg-color; 
+        transition:all 0.25s ease 0s;
+    }
+
+    &.button-trans {
+        background-color: transparent !important;
+        color: $orange-txt-color;
+        border: 1px solid $orange-btn-bg-color; /* Green */
+    }
+
+    &.button-long {
+        width: 245px;
+        margin-bottom: 13px;
+        margin-right: 14px;
+    }
+
+    &.button-white {
+        background-color: #fff !important;
+        color: $orange-txt-color;
+        border: 1px solid $orange-btn-bg-color; 
+
+        &:hover {
+            background-color: $orange-btn-bg-color!important;
+            color: #fff;
+            transition:all 0.25s ease 0s;
+        }
+    }
+
+    .glyphicon {
+        font-size:12px;
+        top:0px;
+        padding-left: 8px;
+    }
 }
 
-a.avatar img {
-    display: inline;
-    // width: 20%;
-    width: 24px;
-    // height: 20%;
+.trial-box-header-label {
+    margin-left: 30px;
+    margin-top: 50px;
+    margin-bottom: 30px;
 }
+
+.trial-box {
+
+    width: 290px;
+    height: 69px;
+    margin-left: 25px;
+    margin-bottom: 15px;
+    float: left;
+    box-shadow: 0px 2px 32px -16px #898989;
+    border-radius: 5px;
+
+    position: relative;
+    top: 0;
+    right: 0;
+    transition: all ease 0.5s;
+
+    &:hover {
+        top:-5px;
+        right:-5px;
+    }
+
+    .trial-name {
+        font-family: "Avenir-heavy";
+        font-size: 16px;
+        color: #000;
+        clear: right;
+        margin: 0px;
+        padding: 0px;
+        margin-bottom: 17px;
+        margin-top: 13px;
+    }
+
+    .trial-img {
+        margin-right: 25px; 
+        height: 69px;
+    }
+}
+
+.lhs {
+    
+    .jumbotron {
+
+        color: #000;
+
+        .btn-continue-trial {
+            float: right;
+
+            @media (min-width: $screen-sm-min) {
+                float: none;
+            }
+        }
+        
+        .button-group {
+
+            margin-top: 31px;
+            text-align: center;
+            width: 247px;
+            margin: 0px auto;
+
+            @media (min-width: $screen-sm-min) {
+                text-align: initial;
+                width: auto;
+                margin: initial;
+            }
+
+            .progress-label-container {
+                text-align: 
+                left;margin-bottom: 30px;
+            }
+        }
+
+        .trial-header {
+
+            font-size: 18px;
+            font-family: 'Avenir-medium' !important;  
+            clear: right;
+            margin: 0px;
+            padding: 0px;
+            line-height: normal;
+            margin-bottom: 17px;
+
+            @media (min-width: $screen-sm-min) {
+                font-size: 23px;
+                line-height: 14pt;
+            }
+        }
+
+        .img-trial {
+            
+            margin-right: 33px; 
+            height: 52px;
+
+            @media (min-width: $screen-sm-min) {
+                height: 72px;                
+            }
+        }
+        
+        .progress-label {
+            font-size: 17px;
+            font-family: "Avenir-heavy";
+        }
+
+        .progress-completion-val {
+            font-size: 17px;
+        }
+
+    }
+    
+    @media (min-width: $screen-sm-min) {
+        margin-left: 45px;
+    }
+}
+
+.rhs {
+
+    margin-left: 30px;
+    margin-right: 20px;
+
+    @media (min-width: $screen-sm-min) {
+        margin-right: initial;
+    }
+
+    h3 {
+        margin-bottom: 20px;
+    }
+
+    .divider {
+        margin-top: 35px;
+    }
+    
+    .button {
+        
+        height: 42px;
+        margin-top: 20px; 
+        margin-bottom: 15px;
+
+        &.book {
+            width: 119px;
+            margin-right: 10px;
+        }
+
+        &.join {
+            width: 182px;
+            margin-right: 0px;
+        }
+
+        &.reserve {
+            width: 172px;
+        }
+
+        &:hover {
+            background-color: $orange-btn-bg-color!important;
+            color: #fff;
+            transition:all 0.25s ease 0s;
+        }
+    }
+
+    .journey-header {
+
+        margin-top: 20px; 
+        width: 100%; 
+        float: left;
+
+        h3 {
+            margin-top: 3px;
+        }
+
+        .svg-question {
+            margin-left: 20px;
+        }
+    }
+    
+    .journey-lg-num {
+        color: $orange-txt-color;
+        font-size: 35px;
+        vertical-align: middle;
+        margin-right: 10px;font-family: 'Avenir-heavy';
+    }
+
+    @media (min-width: $screen-sm-min) {
+        margin-left: 30px;   
+    }
+}
+
